// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRolePageComponent should display user roles in role-list 1`] = `
<pf-user-role-page
  _RoleApiResponse={[Function Object]}
  _UserRoleTabState={[Function Object]}
  companyRolesSubscription={[Function Subscriber]}
  currentRole="undefined"
  currentRoleSubscription={[Function Subscriber]}
  currentTabStateSubscription={[Function Subscriber]}
  currentUserRoleTabState="0"
  dataAccessTabPendingChanges="false"
  dataAccessTabPendingChangesSubscription={[Function Subscriber]}
  deleteTitle={[Function String]}
  env={[Function Object]}
  functionTabPendingChanges="false"
  functionTabPendingChangesSubscription={[Function Subscriber]}
  inEditRoleMode="false"
  permissionIdsToSave={[Function Array]}
  permissionIdsToSaveSubscription={[Function Subscriber]}
  roleApiResponse="undefined"
  roleApiResponseSubscription={[Function Subscriber]}
  roleDataRestrictions={[Function Array]}
  roleDataRestrictionsSubscription={[Function Subscriber]}
  saveButtonDisabled="false"
  saveButtonDisabledSubscription={[Function Subscriber]}
  store={[Function Store]}
  userAssignedRoles={[Function Array]}
  userIdsToAssignSubscription={[Function Subscriber]}
  userIdsToAssignToRole={[Function Array]}
  userRoleService={[Function UserRoleService]}
  usersInCurrentRole="false"
  usersInCurrentRoleSubscription={[Function Subscriber]}
  usersTabPendingChanges="false"
  usersTabPendingChangesSubscription={[Function Subscriber]}
>
  <pf-page-with-title-bar
    class="wrapper"
  >
    
     User Roles 
    
    
    <div
      class="d-flex flex-row main-container"
    >
      <div
        class="d-flex flex-column-reverse left-side-menu flex-grow-7"
      >
        <div
          class="d-flex outer-nav-link m-3"
        >
          <a
            class="cursor-pointer"
          >
            Create New Role
          </a>
        </div>
        <div
          class="scrollable h-100"
        >
          <ul
            class="left-side-menu-nav flex-grow-1 pt-2 pl-0 m-0 mb-0"
          >
            
            <li
              class="py-0 px-1"
            >
              <div
                class="d-flex flex-row left-side-menu-nav-row"
              >
                
                <div
                  class="input-group"
                >
                  <div
                    class="input-group-prepend"
                  >
                    <button
                      class="btn btn-link ignore-click-elsewhere cursor-pointer"
                      style="visibility: hidden;"
                      title="Edit Role Name"
                      type="button"
                    >
                      <fa-icon
                        aria-hidden="true"
                        class="ignore-click-elsewhere ignore-click cursor-pointer"
                        icon="pencil"
                      />
                    </button>
                  </div>
                  <div
                    class="ml-1 pt-1 ignore-click-elsewhere cursor-pointer role-name"
                  >
                    <a>
                      
                    </a>
                  </div>
                  
                </div>
              </div>
            </li>
          </ul>
        </div>
        <h4>
          Roles
        </h4>
      </div>
      <div
        class="d-flex flex-column-reverse flex-grow-1 role-tab-container"
      >
        <div
          class="d-flex flex-row action-container "
        >
          
          <div
            class="d-flex my-3"
          >
            <pf-action-button />
          </div>
        </div>
        <div
          class="d-flex card h-100 flex-grow-1"
        >
          <div
            class="card-header"
          >
            <ul
              class="nav nav-tabs card-header-tabs"
            >
              
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer active"
                >
                  Function 
                </button>
              </li>
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer"
                >
                  Data Access 
                </button>
              </li>
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer"
                >
                  Users 
                </button>
              </li>
            </ul>
          </div>
          <div
            class="scrollable tab-container h-100 p-3"
          >
            
            
            <pf-user-role-function-tab />
            
          </div>
        </div>
      </div>
    </div>
  </pf-page-with-title-bar><pf-add-company-role-modal />
</pf-user-role-page>
`;

exports[`UserRolePageComponent should match snapshot 1`] = `
<pf-user-role-page
  _RoleApiResponse={[Function Object]}
  _UserRoleTabState={[Function Object]}
  companyRolesSubscription={[Function Subscriber]}
  currentRole="undefined"
  currentRoleSubscription={[Function Subscriber]}
  currentTabStateSubscription={[Function Subscriber]}
  currentUserRoleTabState="0"
  dataAccessTabPendingChanges="false"
  dataAccessTabPendingChangesSubscription={[Function Subscriber]}
  deleteTitle={[Function String]}
  env={[Function Object]}
  functionTabPendingChanges="false"
  functionTabPendingChangesSubscription={[Function Subscriber]}
  inEditRoleMode="false"
  permissionIdsToSave={[Function Array]}
  permissionIdsToSaveSubscription={[Function Subscriber]}
  roleApiResponse="undefined"
  roleApiResponseSubscription={[Function Subscriber]}
  roleDataRestrictions={[Function Array]}
  roleDataRestrictionsSubscription={[Function Subscriber]}
  saveButtonDisabled="false"
  saveButtonDisabledSubscription={[Function Subscriber]}
  store={[Function Store]}
  userAssignedRoles="undefined"
  userIdsToAssignSubscription={[Function Subscriber]}
  userIdsToAssignToRole={[Function Array]}
  userRoleService={[Function UserRoleService]}
  usersInCurrentRole="false"
  usersInCurrentRoleSubscription={[Function Subscriber]}
  usersTabPendingChanges="false"
  usersTabPendingChangesSubscription={[Function Subscriber]}
>
  <pf-page-with-title-bar
    class="wrapper"
  >
    
     User Roles 
    
    
    <div
      class="d-flex flex-row main-container"
    >
      <div
        class="d-flex flex-column-reverse left-side-menu flex-grow-7"
      >
        <div
          class="d-flex outer-nav-link m-3"
        >
          <a
            class="cursor-pointer"
          >
            Create New Role
          </a>
        </div>
        <div
          class="scrollable h-100"
        >
          <ul
            class="left-side-menu-nav flex-grow-1 pt-2 pl-0 m-0 mb-0"
          >
            
          </ul>
        </div>
        <h4>
          Roles
        </h4>
      </div>
      <div
        class="d-flex flex-column-reverse flex-grow-1 role-tab-container"
      >
        <div
          class="d-flex flex-row action-container "
        >
          
          <div
            class="d-flex my-3"
          >
            <pf-action-button />
          </div>
        </div>
        <div
          class="d-flex card h-100 flex-grow-1"
        >
          <div
            class="card-header"
          >
            <ul
              class="nav nav-tabs card-header-tabs"
            >
              
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer active"
                >
                  Function 
                </button>
              </li>
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer"
                >
                  Data Access 
                </button>
              </li>
              <li
                class="nav-item"
              >
                <button
                  class="nav-link cursor-pointer"
                >
                  Users 
                </button>
              </li>
            </ul>
          </div>
          <div
            class="scrollable tab-container h-100 p-3"
          >
            
            
            <pf-user-role-function-tab />
            
          </div>
        </div>
      </div>
    </div>
  </pf-page-with-title-bar><pf-add-company-role-modal />
</pf-user-role-page>
`;
